<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nhk2025b_canable</name>
  <version>1.0.0</version>
  <description>CANable ROS2 package for communication with CAN devices.</description>
  <maintainer email="kzs321kzs@gmail.com">kazu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>nhk2025b_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>