<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nhk2025b_launch</name>
  <version>0.0.0</version>
  <description>launchや設定ファイル</description>
  <maintainer email="st23149kz@gm.ibaraki-ct.ac.jp">kazu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- <depend> 依存関係追加 </depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>