<?xml version="1.0"?>
<package format="3">
  <name>nhk2025b_ekf_localizer</name>
  <version>0.0.1</version>
  <description>EKFで自己位置推定</description>
  <maintainer email="kzs321kzs@gmail.com">Kazusa Hashimoto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>