<?xml version="1.0"?>
<package format="3">
  <name>nhk2025b_path_planner</name>
  <version>0.0.1</version>
  <description>path_planner</description>
  <maintainer email="0.hk777700@gmail.com">hk</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>